crates/typr-core/tests/snapshots/snapshot_tests__typing__function_type_inference.snap
---
source: crates/typr-core/tests/snapshot_tests.rs
expression: ty
---
Function(
    [
        ArgumentType(
            Char(
                Val(
                    "a",
                ),
                HelpData {
                    offset: 14,
                    end: 15,
                    file_name: "",
                },
            ),
            Integer(
                Unknown,
                HelpData {
                    offset: 17,
                    end: 17,
                    file_name: "",
                },
            ),
            false,
            false,
            None,
        ),
        ArgumentType(
            Char(
                Val(
                    "b",
                ),
                HelpData {
                    offset: 22,
                    end: 23,
                    file_name: "",
                },
            ),
            Integer(
                Unknown,
                HelpData {
                    offset: 25,
                    end: 25,
                    file_name: "",
                },
            ),
            false,
            false,
            None,
        ),
    ],
    Integer(
        Unknown,
        HelpData {
            offset: 31,
            end: 31,
            file_name: "",
        },
    ),
    HelpData {
        offset: 0,
        end: 45,
        file_name: "",
    },
)
