crates/typr-core/tests/snapshots/snapshot_tests__typing__integer_type.snap
---
source: crates/typr-core/tests/snapshot_tests.rs
assertion_line: 267
expression: ty
---
Integer(
    Val(
        42,
    ),
    HelpData {
        offset: 0,
        end: 2,
        file_name: "",
    },
)
