crates/typr-core/tests/snapshots/snapshot_tests__typing__let_introduces_variable.snap
---
source: crates/typr-core/tests/snapshot_tests.rs
assertion_line: 278
expression: ty
---
Alias(
    "Integer",
    [],
    false,
    HelpData {
        offset: 8,
        end: 8,
        file_name: "",
    },
)
