crates/typr-core/tests/snapshots/snapshot_tests__typing__record_type.snap
---
source: crates/typr-core/tests/snapshot_tests.rs
assertion_line: 298
expression: ty
---
Alias(
    "Point",
    [],
    false,
    HelpData {
        offset: 5,
        end: 22,
        file_name: "",
    },
)
