crates/typr-core/tests/snapshots/snapshot_tests__typing__union_alias.snap
---
source: crates/typr-core/tests/snapshot_tests.rs
assertion_line: 309
expression: ty
---
Tag(
    "Circle",
    Number(
        Val(
            3.14,
        ),
        HelpData {
            offset: 0,
            end: 13,
            file_name: "",
        },
    ),
    HelpData {
        offset: 0,
        end: 13,
        file_name: "",
    },
)
